force-app/main/default/objects/Account/fields/artifact__c.field-meta.xml
<CustomField>
    <fullName>artifact__c</fullName>
    <label>artifact</label>
    <length>10</length>
    <type>Text</type>
</CustomField>