force-app/main/default/objects/Account/fields/Github_Action__c.field-meta.xml
<CustomField>
    <fullName>Github_Action__c</fullName>
    <label>Github Action</label>
    <length>20</length>
    <type>Text</type>
</CustomField>